# Neural_Net

src/: CMakeLists.txt  DenseLayer.cpp  DenseLayer.hpp  Layer.cpp  Layer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  main.cpp  nnalgorithms.cpp  nnalgorithms.hpp
src/DataMining/: CMakeLists.txt  power_consumption.cpp  power_consumption.hpp
